--- a/newwww.css
+++ b/newwww.css
@@ -92,11 +92,11 @@ width: 50%;
 /* width: 20%; */
 
 }
-#p3{
+/* #p3{
     padding-top: 400px;
     background-image:url( "https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?size=626&ext=jpg&ga=GA1.2.1276333606.1639008000") ;
-    background-size: cover;
-}
+    background-size: 100px;
+} */
 .con3{
    
    display: flex;
