--- a/newwww.css
+++ b/newwww.css
@@ -24,7 +24,7 @@ background-color: white;
     
 }
 #music{
-    align-items: flex-end;
+
 }
 #start{
 background-color:blue;
@@ -92,19 +92,14 @@ width: 100%;
    justify-content: center;
 width: 50%;
 
-/* width: 20%; */
-
 }
-/* #p3{
-    padding-top: 400px;
-    background-image:url( "https://img.freepik.com/free-vector/hand-painted-watercolor-pastel-sky-background_23-2148902771.jpg?size=626&ext=jpg&ga=GA1.2.1276333606.1639008000") ;
-    background-size: 100px;
-} */
+
 .con3{
    
    display: flex;
-padding-top: 1500px;
+padding-top: 800px;
 flex-direction: column;
+justify-self: end;
     font-size: 30px;
     color: rgb(192, 29, 119);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
