--- a/newwww.css
+++ b/newwww.css
@@ -8,8 +8,8 @@
     height:500px;
    width: 100%;
   }
-  @media all and (max-width: 600px) {
-      .hero{
+  @media all and (max-width:800px) {
+      .hero{ display: flex;
 background-color: white;
       }
   }
