--- a/newwww.css
+++ b/newwww.css
@@ -103,6 +103,10 @@ padding-top: 50px;
 padding-left: 150px;
 
 }
+image{
+    width: 40%;
+    height: 60%;
+}
 
 /* button{
     /* background-color: black; */
