--- a/newwww.css
+++ b/newwww.css
@@ -61,6 +61,8 @@ background-color: white;
 }
 
 #con2{
+    background-color: rgb(10, 75, 161);
+    
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -85,7 +87,8 @@ background-color: white;
     justify-content: center;
     width: 100%;
     height: 15%;
-   color: rgb(51, 27, 27);
+   color:darkorange;
+   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 #first{
 width: 30%;    
@@ -103,66 +106,17 @@ padding-top: 50px;
 padding-left: 150px;
 
 }
+#try{
+  display: flex;
+  flex-direction:row;
+  justify-content: end;
+}
 image{
     width: 40%;
     height: 60%;
 }
 
-/* button{
-    /* background-color: black; */
-    /* color: white; */
-    /* width:70px;
-    height: 50px;
-    font-size:20px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-} */ 
 
 
-/* .first{ */
-    /* padding-right: 0px; */
-    /* display: flex; */
-    /* flex-direction: row;
-    width: 50%; */
-    /* justify-content: center; */
-    /* border-right: solid black; */
-    /* border-right: solid black; */
-/* }
-.second{
-    width: 50%;
-    flex-direction:row;
-}
-#buttonCon{
-    flex-direction: column; 
-     width: 50%;
-} */
 
 
-/* 
-#third{
-    padding-top: 500px;
-   display: flex;
-   flex-direction:row;
-   justify-content: center;
-width: 50%;
-
-} */ 
-
-/* .con3{
-   
-   display: flex;
-padding-top: 800px;
-flex-direction: column;
-justify-self: end;
-    font-size: 30px;
-    color: rgb(192, 29, 119);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- 
-} 
-#try{
-    padding-left: 100px;
-    display: flex;
-    flex-direction:column; 
-   width: 100%; 
-padding-left: 400px;
- /* background-color: black; */
-/* } */
