--- a/newwww.css
+++ b/newwww.css
@@ -82,12 +82,13 @@ background-color: white;
     width: 100%;
 }
 #title{
-    
+    padding-top: 20px;
     display: flex;
     justify-content: center;
     width: 100%;
     height: 15%;
-   color:darkorange;
+   color:rgb(199, 9, 9);
+   background-color: white;
    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 #first{
@@ -105,12 +106,14 @@ width: 30%;
 height: 50%;
 padding-top: 50px;
 padding-left: 150px;
-
+border: 20px;
 }
 #try{
   display: flex;
   flex-direction:row;
-  justify-content: end;
+  justify-content: left;
+  width: 5%;
+  border: solid blue;
 }
 image{
     width: 40%;
@@ -125,5 +128,12 @@ image{
 #con3{
     display: none;
 }
-
+#back{
+    display: flex;
+    flex-direction:row;
+  
+    justify-content: left;
+    width: 5%;
+    border: solid blue;
+}
 
